# Arcanum

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml  railway.toml  start.sh
src/: broadcast.rs  cache.rs  config.rs  error.rs  main.rs  static_files.rs  storage.rs  ws.rs
src/db/: mod.rs
src/handlers/: admin.rs  auth.rs  direct.rs  groups.rs  health.rs  messages.rs  mod.rs  users.rs
src/models/: group.rs  message.rs  mod.rs  user.rs
src/utils/: audit.rs  ip.rs  jwt.rs  mod.rs  password.rs  permissions.rs  rate_limit.rs  uid.rs
